# econ-flow-visualizer

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
rust_core/: Cargo.toml
rust_core/src/: lib.rs  main.rs
src/: analysis.py  app.py  downloader.py  parser.py  visualization.py
src/rust_core/: __init__.py
src/templates/: index.html
tests/: test_parser.py
